Make optional fields nullable, ChoiceBox => ComboBox, better alerts