@@ -19,7 +19,10 @@ import javafx.fxml.Initializable;
 import javafx.scene.control.Alert.AlertType;
 import javafx.scene.control.Button;
 import javafx.scene.control.ChoiceBox;
+import javafx.scene.control.ComboBox;
 import javafx.scene.control.TextField;
+import javafx.scene.paint.Color;
+import javafx.scene.text.Text;
 import javafx.stage.Stage;
 import lombok.Setter;
 import lombok.extern.log4j.Log4j2;
@@ -50,13 +53,11 @@ import org.otpr11.itassetmanagementapp.utils.StringUtils;
 public class DeviceEditorController implements Initializable, ViewController {
   private static final DeviceType DEFAULT_DEVICE_TYPE = DeviceType.LAPTOP;
   private static final DeviceStatus DEFAULT_DEVICE_STATUS = DeviceStatus.VACANT;
-  private static final String SELECTOR_DEFAULT_TILE = "Select...";
+  private static final String SELECTOR_DEFAULT_TITLE = "Select...";
   private static boolean IS_EDIT_MODE;
 
   private final GlobalDAO dao = GlobalDAO.getInstance();
-  private final Device device = new Device();
   private final Validator validator = new Validator();
-
   private final List<String> deviceTypes =
       Arrays.stream(DeviceType.values()).map(DeviceType::toString).collect(Collectors.toList());
   private final List<String> deviceStatuses =
@@ -66,9 +67,8 @@ public class DeviceEditorController implements Initializable, ViewController {
   private final List<String> locations =
       dao.locations.getAll().stream().map(Location::getId).collect(Collectors.toList());
   private final List<String> operatingSystems =
-      dao.operatingSystems.getAll().stream()
-          .map(OperatingSystem::toPrettyString)
-          .collect(Collectors.toList());
+      dao.operatingSystems.getAll().stream().map(OperatingSystem::toPrettyString).toList();
+  private Device device = new Device();
   private List<String> configs = formatRelevantHWConfigs(DEFAULT_DEVICE_TYPE);
 
   @Setter private Main main;
@@ -76,13 +76,7 @@ public class DeviceEditorController implements Initializable, ViewController {
   @Setter private Object sceneChangeData;
 
   @FXML private CheckComboBox<String> osSelector;
-  @FXML
-  private ChoiceBox<String> deviceTypeSelector,
-      statusSelector,
-      userSelector,
-      locationSelector,
-      configSelector,
-      modelYearSelector;
+  @FXML private ChoiceBox<String> deviceTypeSelector;
   @FXML
   private TextField deviceIDField,
       manufacturerField,
@@ -97,6 +91,9 @@ public class DeviceEditorController implements Initializable, ViewController {
       addLocationButton,
       okButton,
       cancelButton;
+  @FXML private ComboBox<String> configSelector, statusSelector, userSelector, locationSelector;
+  @FXML private ComboBox<Integer> modelYearSelector;
+  @FXML private Text configSelectorTitle, osSelectorTitle;
 
   @Override
   public void initialize(URL url, ResourceBundle rb) {
@@ -111,9 +108,9 @@ public class DeviceEditorController implements Initializable, ViewController {
     // Init dropdowns
     initDropdown(statusSelector, deviceStatuses, DEFAULT_DEVICE_STATUS.toString());
     initDropdown(deviceTypeSelector, deviceTypes, DEFAULT_DEVICE_TYPE.toString());
-    initDropdown(userSelector, users, users.size() == 0 ? null : users.get(0));
-    initDropdown(locationSelector, locations, locations.size() == 0 ? null : locations.get(0));
-    initDropdown(configSelector, configs, configs.size() == 0 ? null : configs.get(0));
+    initDropdown(userSelector, users, true);
+    initDropdown(locationSelector, locations, true);
+    initDropdown(configSelector, configs, false);
 
     // Update HW configs when device type changes
     deviceTypeSelector.setOnAction(
@@ -130,7 +127,7 @@ public class DeviceEditorController implements Initializable, ViewController {
         };
 
     osSelector.getItems().addAll(operatingSystems);
-    osSelector.setTitle(SELECTOR_DEFAULT_TILE);
+    osSelector.setTitle(SELECTOR_DEFAULT_TITLE);
     osSelector
         .getCheckModel()
         .getCheckedItems()
@@ -150,16 +147,20 @@ public class DeviceEditorController implements Initializable, ViewController {
                       if (changeList.size() != 0) {
                         osSelector.setTitle(String.join(", ", changeList));
                       } else {
-                        osSelector.setTitle(SELECTOR_DEFAULT_TILE);
+                        osSelector.setTitle(SELECTOR_DEFAULT_TITLE);
                       }
                     }
                   }
                 });
 
-    modelYearSelector.setValue(Integer.toString(Year.now().getValue()));
-    configSelector.setValue(SELECTOR_DEFAULT_TILE);
-    userSelector.setValue(SELECTOR_DEFAULT_TILE);
-    locationSelector.setValue(SELECTOR_DEFAULT_TILE);
+    for (int year = Year.now().getValue(); year >= 1970; year--) {
+      modelYearSelector.getItems().add(year);
+    }
+
+    select(modelYearSelector, Year.now().getValue());
+    configSelector.setValue(SELECTOR_DEFAULT_TITLE);
+    userSelector.setValue(SELECTOR_DEFAULT_TITLE);
+    locationSelector.setValue(SELECTOR_DEFAULT_TITLE);
 
     addHWConfigButton.setOnAction(event -> main.showHWConfigEditor(null));
     addOSButton.setOnAction(event -> main.showOSEditor(null));
@@ -167,44 +168,69 @@ public class DeviceEditorController implements Initializable, ViewController {
     addLocationButton.setOnAction(event -> main.showLocationEditor(null));
     okButton.setOnAction(this::onSave);
     cancelButton.setOnAction(this::onCancel);
-
-    for (int year = Year.now().getValue(); year > 1969; year--){
-        modelYearSelector.getItems().add(Integer.toString(year));
-    }
   }
 
-  private void initDropdown(ChoiceBox<String> dropdown, List<String> items, String initialValue) {
+  @SuppressWarnings({"unchecked", "rawtypes"})
+  private void initDropdown(ChoiceBox dropdown, List items, String initialValue) {
     dropdown.getItems().setAll(items);
     dropdown.setValue(initialValue);
   }
 
+  @SuppressWarnings({"unchecked", "rawtypes"})
+  private void initDropdown(ComboBox dropdown, List items, boolean isNullable) {
+    if (isNullable) {
+      dropdown.getItems().add(SELECTOR_DEFAULT_TITLE);
+    }
+
+    dropdown.getItems().addAll(items);
+  }
+
+  @SuppressWarnings({"unchecked", "rawtypes"})
+  private void initDropdown(ComboBox dropdown, List items, String initialValue) {
+    dropdown.getItems().addAll(items);
+    dropdown.setValue(initialValue);
+  }
+
   private void onSave(ActionEvent event) {
-    if (validator.containsWarnings() || validator.containsErrors()) {
+    // Reset old colorings
+    configSelectorTitle.setFill(null);
+    osSelectorTitle.setFill(null);
+
+    val noConfig = configSelector.getSelectionModel().getSelectedIndex() == -1;
+    val noOS = osSelector.getCheckModel().getCheckedItems().size() == 0;
+
+    if (validator.containsWarnings() || validator.containsErrors() || noConfig || noOS) {
       AlertUtils.showAlert(
-          AlertType.ERROR,
-          "Invalid input",
-          "One or more required field values are missing or invalid.");
-    } else if (configSelector.getSelectionModel().getSelectedIndex() == -1) {
-      AlertUtils.showAlert(
-          AlertType.ERROR,
-          "No hardware configuration selected",
-          "No hardware configuration has been selected for this device.");
-    } else if (osSelector.getCheckModel().getCheckedItems().size() == 0) {
-      AlertUtils.showAlert(
-          AlertType.ERROR,
-          "No operating system selected",
-          "No operating system has been selected for this device.");
+          AlertType.ERROR, "Invalid input", "One or more required values are missing or invalid.");
+
+      if (noConfig) {
+        // FIXME: Replace with localised version, this won't reset now, but it doesn't matter as we
+        // need to get it from locale anyway
+        configSelectorTitle.setText("⚠️ " + configSelectorTitle.getText());
+        configSelectorTitle.setFill(Color.RED);
+      }
+
+      if (noOS) {
+        // FIXME: Replace with localised version, this won't reset now, but it doesn't matter as we
+        // need to get it from locale anyway
+        osSelectorTitle.setText("⚠️ " + osSelectorTitle.getText());
+        osSelectorTitle.setFill(Color.RED);
+      }
     } else if (!IS_EDIT_MODE && dao.devices.get(deviceIDField.getText()) != null) {
-      // FIXME: This might allow overwriting, need to check it in a more sophisticated manner
       AlertUtils.showAlert(
           AlertType.ERROR, "Duplicate ID detected", "A device with this ID already exists.");
+    } else if (IS_EDIT_MODE && !deviceIDField.getText().equals(device.getId())) {
+      AlertUtils.showAlert(
+          AlertType.ERROR,
+          "Attempted device overwrite detected",
+          "A device with the ID you're changing this device's ID to already exists.");
     } else {
       // Set basic properties
       device.setId(deviceIDField.getText());
       device.setManufacturer(manufacturerField.getText());
       device.setModelID(modelIDField.getText());
       device.setModelName(modelNameField.getText());
-      device.setModelYear(modelYearSelector.getValue());
+      device.setModelYear(modelYearSelector.getSelectionModel().getSelectedItem().toString());
       device.setMacAddress(macAddressField.getText());
       device.setNickname(nicknameField.getText());
 
@@ -229,14 +255,16 @@ public class DeviceEditorController implements Initializable, ViewController {
       device.setOperatingSystems(osList);
 
       // If user is selected (optional)
-      if (getChoiceIndex(userSelector) != -1) {
-        val user = dao.users.getAll().get(getChoiceIndex(userSelector));
+      if (getChoiceIndex(userSelector) > 0) {
+        // Since this field is nullable, our indices get pushed 1 index forwards
+        val user = dao.users.getAll().get(getChoiceIndex(userSelector) - 1);
         device.setUser(user);
       }
 
       // If location is selected (optional)
-      if (getChoiceIndex(locationSelector) != -1) {
-        val location = dao.locations.getAll().get(getChoiceIndex(locationSelector));
+      if (getChoiceIndex(locationSelector) > 0) {
+        // Since this field is nullable, our indices get pushed 1 index forwards
+        val location = dao.locations.getAll().get(getChoiceIndex(locationSelector) - 1);
         device.setLocation(location);
       }
 
@@ -310,7 +338,7 @@ public class DeviceEditorController implements Initializable, ViewController {
       stage.setTitle("Manage device %s".formatted(sceneChangeData));
 
       // Determine device to edit
-      val device = dao.devices.get((String) sceneChangeData);
+      device = dao.devices.get((String) sceneChangeData);
 
       // Fill in data for this device
       val cfg = device.getConfiguration();
@@ -323,7 +351,7 @@ public class DeviceEditorController implements Initializable, ViewController {
       manufacturerField.setText(device.getManufacturer());
       modelNameField.setText(device.getModelName());
       modelIDField.setText(device.getModelID());
-      modelYearSelector.setValue(device.getModelYear());
+      select(modelYearSelector, Integer.parseInt(device.getModelYear()));
       macAddressField.setText(device.getMacAddress());
 
       if (device.getConfiguration() != null) {
